# shcedule-ugltu

./: .env  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  tsconfig.app.json
.github/workflows/: test_backend.yaml  test_bot.yaml
app/: configure_logging.py  exceptions.py  main.py  router.py
app/cache/: client.py  manager.py
app/core/: config.py  utils.py
app/db/: base_repository.py  database.py  models.py
app/migration/: env.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: exceptions.py  initial_data.py  main.py  router.py
backend/app/cache/: client.py  custom_redis.py  manager.py
backend/app/core/: config.py  rabbit_connection.py  utils.py
backend/app/core/broker/: connection.py  dep.py  publisher.py  rabbit_connection.py
backend/app/core/events/: base.py  lesson.py
backend/app/db/: base_repository.py  database.py  models.py
backend/app/domain/auth/: repository.py  routes.py  schemas.py  service.py  utils.py
backend/app/domain/building/: repository.py  routes.py  schemas.py  service.py
backend/app/domain/group/: routes.py  service.py
backend/app/domain/lesson/: repository.py  routes.py  schemas.py  service.py  utils.py
backend/app/domain/room/: repository.py  routes.py  schemas.py  service.py
backend/app/domain/student/: routes.py  schemas.py  service.py
backend/app/domain/subject/: repository.py  routes.py  service.py
backend/app/domain/teacher/: routes.py  schemas.py  service.py
backend/app/migration/: env.py
backend/scripts/: prestart.sh
backend/tests/: conftest.py  factories.py  utils.py
backend/tests/auth/: test_auth_routes.py  test_auth_service.py
backend/tests/building/: test_building_routes.py  test_building_service.py
backend/tests/group/: test_group_routes.py  test_group_service.py
backend/tests/lesson/: test_lesson_routes.py  test_lesson_service.py
backend/tests/room/: test_room_routes.py  test_room_service.py
backend/tests/subject/: test_subject_routes.py  test_subject_service.py
backend/tests/teacher/: test_teacher_routes.py
frontend/: .gitignore  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
src/app/: routes.tsx
src/lib/: zod-types.ts
tests/: conftest.py  factories.py
tests/auth/: test_auth_routes.py  test_auth_service.py
tests/building/: test_building_routes.py  test_building_service.py
tests/group/: test_group_routes.py  test_group_service.py
tests/lesson/: test_lesson_service.py
tests/room/: test_room_routes.py
tests/subject/: test_subject_routes.py
tgbot/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
tgbot/bot/: crud.py  main.py  models.py
tgbot/bot/core/: config.py  consumer.py  db.py  db_middleware.py
tgbot/bot/core/events/: base.py  lesson.py
tgbot/bot/handlers/: delete.py  help.py  register_flow.py  start.py  states.py  subscription.py
tgbot/bot/keyboards/: inline.py
tgbot/bot/services/: api.py  notifications.py  schemas.py  utils.py
tgbot/bot/tasks/: handle_lesson_update.py  router.py
tgbot/scripts/: restart_bot.sh  start_bot.sh  stop_bot.sh
tgbot/tests/: conftest.py  utils.py
tgbot/tests/crud/: test_crud.py
tgbot/tests/services/: test_api.py  test_utils.py
tgbot_usfeu/: .gitignore  pyproject.toml
tgbot_usfeu/bot/: config.py  (+4 more)
(+172 files in other folders)
